<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PPAM controller</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
	
    <string name="newfile">NEW FILE</string>
    <string name="start">MAIN START</string>
    <string name="wrrt">TIME WRITE</string>
    <string name="end">MAIN END</string>
    <string name="msgstart">MSG START</string>
    <string name="msgend">MSG END</string>
    <string name="substart">SUB START</string>
    <string name="subend">SUB END</string>
    <string name="rtc">SET TIME</string>
                
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
</resources>
